--- a/Promoter.css
+++ b/Promoter.css
@@ -73,7 +73,7 @@
 }
 
 #user-rollover.id-4690413 .badge-box>i.bdg, .id-4690413>.badge-box>i.bdg {
-    background-image: url("https://media.tenor.com/images/a9e0ee36eb929d9fb5968a3030ea1c1d/tenor.gif");
+    background-image: url("https://i.imgur.com/TDxLb5A.gif");
     border-radius: 6px;
 }
 
