--- a/Promoter.css
+++ b/Promoter.css
@@ -59,7 +59,7 @@
 /* Molly */
 
 .icon-chat-manager {
-    background: url("https://i.imgur.com/FATKOW3.gif");
+    background: url("https://i.imgur.com/TDxLb5A.gif");
 }
 
 .icon-chat-manager+span, #user-lists .group.manager~.user span, #dialog-user-role .role-menu .menu ul .manager span {
