--- a/Bot.css
+++ b/Bot.css
@@ -1,4 +1,4 @@
-/* FMG | Bot */
+/* SFD | Bot */
 
 #user-lists .list .user.id-20168147 .name:after,
 #user-rollover.id-20168147 .meta .username:after,
