--- a/Custom.css
+++ b/Custom.css
@@ -9,7 +9,7 @@
 	font-size: 11px;
 	width: 300px;
 	box-sizing: border-box;
-	content: "FMG Community | PlugThemed - red: V 6.5.0.0!";
+	content: "SFD Community | PlugThemed - red: V 6.5.0.1!";
 	font-weight: bold;
 	padding: 5px;
 	background-color: rgb(50, 0, 0);
